Update Team Fragment

--- a/app/src/main/res/layout/fragment_sponsors.xml
+++ b/app/src/main/res/layout/fragment_sponsors.xml
@@ -2,6 +2,17 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/overlay_dark_90"
+    android:padding="16dp">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sponsors"
+        android:fontFamily="@font/alata_regular"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/text_32"/>
+
 
 </LinearLayout>
