--- a/app/src/main/res/drawable/curved_card_blue_dark.xml
+++ b/app/src/main/res/drawable/curved_card_blue_dark.xml
@@ -6,8 +6,8 @@
         android:radius="@dimen/spacing_middle"/>
 
     <gradient
-        android:startColor="@color/blue_600"
-        android:endColor="@color/blue_grey_300"
+        android:startColor="@color/brown_700"
+        android:endColor="@color/brown_500"
         android:angle="45"/>
 
 </shape>
