--- a/app/src/main/res/layout/item_team_member.xml
+++ b/app/src/main/res/layout/item_team_member.xml
@@ -7,20 +7,19 @@
     android:background="@android:color/transparent"
     android:padding="@dimen/spacing_xsmall">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/memberImage"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
-        app:civ_border_width="1dp"
-        app:civ_border_color="@color/orange_700"
         android:src="@drawable/zealicon_icon"/>
 
     <TextView
+        android:id="@+id/memberName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:text="Member Name"
-        android:textSize="16dp"
+        android:textSize="14dp"
         android:textColor="@color/white"
         android:gravity="center"
         android:layout_gravity="center"
@@ -29,15 +28,17 @@
         android:includeFontPadding="false"/>
 
     <TextView
+        android:id="@+id/memberDesignation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:text="Developer"
-        android:textSize="14dp"
+        android:textSize="12dp"
         android:textColor="@color/white"
         android:gravity="center"
         android:layout_gravity="center"
         android:fontFamily="@font/alata_regular"
-        android:includeFontPadding="false"/>
+        android:includeFontPadding="false"
+        android:layout_marginBottom="@dimen/spacing_small"/>
 
 </LinearLayout>
