--- a/app/src/main/res/layout/my_playlist_fragment.xml
+++ b/app/src/main/res/layout/my_playlist_fragment.xml
@@ -66,6 +66,7 @@
         app:layout_constraintStart_toStartOf="@id/playlistTextView"
         app:layout_constraintEnd_toEndOf="@id/playlistTextView"
         android:layout_marginTop="@dimen/spacing_middle"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="10"
         tools:listitem="@layout/item_search"/>
 
