--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,11 @@
 
     <color name="white">#fff</color>
 
+    <color name="blue_black">#5D6D7E</color>
+
+    <color name="blue_black_darker">#283747</color>
+
+
     <!--<color name="light_blue_50">#E1F5FE</color>-->
 
 
