--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,7 +138,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintVertical_chainStyle="packed"
-                android:text="FETCHING TRACKS..."
+                android:text="Fetching tracks..."
                 android:textSize="@dimen/text_big"
                 android:textColor="@color/grey_20"
                 android:fontFamily="@font/alata_regular"/>
