--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -52,7 +52,7 @@
             android:clickable="true"
             android:layout_width="26dp"
             android:layout_height="26dp"
-            android:src="@drawable/ic_mute"
+            android:src="@drawable/ic_unmute"
             android:tint="@color/white"
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/spacing_xlarge"
