--- a/app/src/main/res/layout/subscription_fragment.xml
+++ b/app/src/main/res/layout/subscription_fragment.xml
@@ -1,67 +1,277 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment.SubscriptionFragment"
-    android:background="#000">
+    android:background="@color/overlay_dark_90">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/spacing_mlarge"
-        android:id="@+id/subscriptionTextView"
-        android:text="Subscription"
-        android:textColor="@color/white"
-        android:textSize="22dp"
-        android:layout_marginStart="@dimen/spacing_mlarge"
-        android:fontFamily="@font/alata_regular"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/spacing_mlarge"
+            android:id="@+id/subscriptionTextView"
+            android:text="Subscribe to Zealicon"
+            android:textColor="@color/white"
+            android:textSize="22dp"
+            android:layout_marginStart="@dimen/spacing_mlarge"
+            android:fontFamily="@font/alata_regular"/>
 
-    <EditText
-        android:id="@+id/subscriptionEditText"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/spacing_xxlarge"
-        app:layout_constraintTop_toBottomOf="@id/subscriptionTextView"
-        app:layout_constraintEnd_toEndOf="@id/subscriptionTextView"
-        app:layout_constraintStart_toStartOf="@id/subscriptionTextView"
-        android:textColor="@color/white"
-        android:textColorHint="@color/grey_40"
-        android:hint="Search for Zeal Information"
-        android:paddingStart="@dimen/spacing_xxlarge"
-        android:imeOptions="actionSearch"
-        android:paddingEnd="@dimen/spacing_middle"
-        android:paddingTop="@dimen/spacing_middle"
-        android:paddingBottom="@dimen/spacing_middle"
-        android:layout_marginTop="@dimen/spacing_middle"
-        android:background="@drawable/curved_search" />
+        <EditText
+            android:id="@+id/nameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:layout_constraintTop_toBottomOf="@id/subscriptionTextView"
+            android:layout_marginTop="@dimen/margin_large"
+            android:layout_marginStart="@dimen/spacing_mlarge"
+            android:layout_marginEnd="@dimen/spacing_mlarge"
+            android:background="@drawable/form_bg"
+            android:fontFamily="@font/alata_regular"
+            android:hint="Name"
+            android:textColor="@color/white"
+            android:paddingStart="@dimen/spacing_mlarge"
+            android:paddingEnd="@dimen/spacing_mlarge"
+            android:textColorHint="@color/grey_20"
+            android:inputType="text"
+            android:textSize="18dp"/>
 
-    <ImageView
-        android:layout_width="@dimen/spacing_mlarge"
-        android:layout_height="@dimen/spacing_mlarge"
-        android:src="@drawable/ic_search"
-        android:layout_marginLeft="@dimen/spacing_middle"
-        android:tint="@color/grey_20"
-        app:layout_constraintTop_toTopOf="@id/subscriptionEditText"
-        app:layout_constraintBottom_toBottomOf="@id/subscriptionEditText"
-        app:layout_constraintStart_toStartOf="@id/subscriptionEditText"/>
+        <EditText
+            android:id="@+id/emailEditText"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:layout_constraintTop_toBottomOf="@id/nameEditText"
+            android:layout_marginTop="@dimen/margin_large"
+            android:layout_marginStart="@dimen/spacing_mlarge"
+            android:layout_marginEnd="@dimen/spacing_mlarge"
+            android:background="@drawable/form_bg"
+            android:fontFamily="@font/alata_regular"
+            android:hint="E-mail id"
+            android:textColor="@color/white"
+            android:paddingStart="@dimen/spacing_mlarge"
+            android:paddingEnd="@dimen/spacing_mlarge"
+            android:textColorHint="@color/grey_20"
+            android:inputType="textEmailAddress"
+            android:textSize="18dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/myAccountTextView"
-        android:text="My Account"
-        android:textColor="@color/white"
-        android:textSize="22dp"
-        app:layout_constraintStart_toStartOf="@id/subscriptionEditText"
-        app:layout_constraintTop_toBottomOf="@id/subscriptionEditText"
-        android:layout_marginTop="@dimen/spacing_middle"
-        android:fontFamily="@font/alata_regular"/>
+        <EditText
+            android:id="@+id/admnoEditText"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:layout_constraintTop_toBottomOf="@id/phoneEditText"
+            android:layout_marginTop="@dimen/margin_large"
+            android:layout_marginStart="@dimen/spacing_mlarge"
+            android:layout_marginEnd="@dimen/spacing_mlarge"
+            android:background="@drawable/form_bg"
+            android:fontFamily="@font/alata_regular"
+            android:hint="Admission no"
+            android:textColor="@color/white"
+            android:paddingStart="@dimen/spacing_mlarge"
+            android:paddingEnd="@dimen/spacing_mlarge"
+            android:textColorHint="@color/grey_20"
+            android:inputType="text"
+            android:textSize="18dp"/>
 
+        <EditText
+            android:id="@+id/phoneEditText"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:layout_constraintTop_toBottomOf="@id/emailEditText"
+            android:layout_marginTop="@dimen/margin_large"
+            android:layout_marginStart="@dimen/spacing_mlarge"
+            android:layout_marginEnd="@dimen/spacing_mlarge"
+            android:background="@drawable/form_bg"
+            android:fontFamily="@font/alata_regular"
+            android:hint="Mobile no (10 digits)"
+            android:textColor="@color/white"
+            android:paddingStart="@dimen/spacing_mlarge"
+            android:paddingEnd="@dimen/spacing_mlarge"
+            android:textColorHint="@color/grey_20"
+            android:inputType="phone"
+            android:textSize="18dp"/>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/areYouHumanBtn"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:clickable="true"
+            android:focusable="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/margin_large"
+            android:layout_marginStart="@dimen/spacing_xxlarge"
+            android:layout_marginEnd="@dimen/spacing_xxlarge"
+            app:layout_constraintTop_toBottomOf="@id/admnoEditText">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:id="@+id/areYouHumanBg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/curved_search"
+                android:alpha="0.9"/>
+
+            <TextView
+                android:id="@+id/areYouHumanText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/areYouHumanImg"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                android:text="Are you a human?"
+                android:fontFamily="@font/alata_regular"
+                android:textColor="@color/white"
+                android:textSize="20dp"/>
+
+            <ImageView
+                android:id="@+id/areYouHumanImg"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_robot"
+                app:layout_constraintStart_toEndOf="@id/areYouHumanText"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                android:layout_marginStart="@dimen/spacing_mxlarge"
+                android:tint="@color/white"/>
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/loader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Loading..."
+                android:fontFamily="@font/alata_regular"
+                android:scrollbarSize="18dp"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/verifiedBtn"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/margin_large"
+            android:layout_marginStart="@dimen/spacing_xxlarge"
+            android:layout_marginEnd="@dimen/spacing_xxlarge"
+            app:layout_constraintTop_toBottomOf="@id/admnoEditText">
+
+            <View
+                android:id="@+id/verifiedBg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/curved_search"
+                android:alpha="0.9"/>
+
+            <TextView
+                android:id="@+id/verifiedText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tick"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                android:text="Verified"
+                android:fontFamily="@font/alata_regular"
+                android:textColor="@color/white"
+                android:textSize="20dp"/>
+
+            <ImageView
+                android:id="@+id/tick"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/ic_tick"
+                app:layout_constraintStart_toEndOf="@id/verifiedText"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                android:layout_marginStart="@dimen/spacing_mxlarge"
+                android:tint="@color/white"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/registerBtn"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            app:cardCornerRadius="10dp"
+            app:layout_constraintTop_toBottomOf="@id/verifiedBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/spacing_mxlarge"
+            android:layout_marginStart="@dimen/spacing_xxlarge"
+            android:layout_marginEnd="@dimen/spacing_xxlarge">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/curved_card_blue"/>
+
+                <TextView
+                    android:id="@+id/regText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="REGISTER"
+                    android:fontFamily="@font/alata_regular"
+                    android:textSize="24dp"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+                <TextView
+                    android:visibility="gone"
+                    android:id="@+id/regLoader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Loading..."
+                    android:fontFamily="@font/alata_regular"
+                    android:scrollbarSize="20dp"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/registerBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/spacing_mxlarge"
+            android:text="Already registered?"
+            android:textColor="@color/overlay_light_80"
+            android:textSize="18dp"
+            android:id="@+id/alreadyRegUser"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
