--- a/app/src/main/res/layout/fragment_info_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_info_bottom_sheet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,79 +10,239 @@
     android:minHeight="500dp"
     android:background="@color/colorPrimary">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rootView"
-        android:layout_marginStart="@dimen/spacing_mlarge">
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
 
-        <ImageView
-            android:id="@+id/closeButton"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:padding="6dp"
-            android:src="@drawable/ic_close"
-            android:tint="@color/white"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_large"/>
-
-        <TextView
-            android:id="@+id/eventName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/spacing_xlarge"
-            android:text="Line-up"
-            android:textSize="28dp"
-            android:textColor="@color/colorAccent"
-            android:fontFamily="@font/alata_regular"/>
-
-        <TextView
-            android:id="@+id/eventType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/eventName"
-            app:layout_constraintStart_toStartOf="@id/eventName"
-            android:text="Day ONE  |  Play it on"
-            android:textColor="@color/grey_40"
-            android:textSize="14dp"
-            android:fontFamily="@font/alata_regular"/>
-
-        <androidx.core.widget.NestedScrollView
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/rootView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_mlarge"
-            app:layout_constraintTop_toBottomOf="@id/eventType"
-            app:layout_constraintStart_toStartOf="@id/eventType"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="@dimen/spacing_mlarge"
-            app:layout_constraintVertical_bias="0"
-            android:layout_marginEnd="@dimen/spacing_mlarge">
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/spacing_mlarge">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+            <ImageView
+                android:id="@+id/closeButton"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="@dimen/margin_large"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:padding="6dp"
+                android:src="@drawable/ic_close"
+                android:tint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/eventName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_xlarge"
+                android:fontFamily="@font/alata_regular"
+                android:text="Line-up"
+                android:textColor="@color/colorAccent"
+                android:textSize="28dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/eventType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/alata_regular"
+                android:text="Day ONE  |  Play it on"
+                android:textColor="@color/grey_40"
+                android:textSize="14dp"
+                app:layout_constraintStart_toStartOf="@id/eventName"
+                app:layout_constraintTop_toBottomOf="@id/eventName" />
+
+            <Button
+                android:id="@+id/registerButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_middle"
+                android:text="Register Now"
+                android:paddingStart="@dimen/spacing_mlarge"
+                android:paddingEnd="@dimen/spacing_mlarge"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/eventType"
                 app:layout_constraintTop_toBottomOf="@id/eventType"
-                app:layout_constraintStart_toStartOf="@id/eventType">
+                app:layout_constraintVertical_bias="0"
+                android:background="@drawable/orange_gradient"
+                android:clickable="true"
+                android:elevation="10dp"
+                android:focusable="true"/>
 
-                <TextView
-                    android:alpha="0.8"
-                    android:id="@+id/eventDescription"
+
+            <androidx.core.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_mlarge"
+                android:layout_marginEnd="@dimen/spacing_mlarge"
+                android:layout_marginBottom="@dimen/spacing_mlarge"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/eventType"
+                app:layout_constraintTop_toBottomOf="@id/registerButton"
+                app:layout_constraintVertical_bias="0">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Event description here\njbkkb\nkgkugi\njvghjghjgkhg"
-                    android:textColor="@color/white"
-                    android:textSize="16dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:fontFamily="@font/roboto_regular"/>
+                    app:layout_constraintStart_toStartOf="@id/eventType"
+                    app:layout_constraintTop_toBottomOf="@id/eventType">
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/eventDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:alpha="0.8"
+                        android:fontFamily="@font/roboto_regular"
+                        android:text="Event description here\njbkkb\nkgkugi\njvghjghjgkhg"
+                        android:textColor="@color/white"
+                        android:textSize="14dp" />
 
-        </androidx.core.widget.NestedScrollView>
+                    <TextView
+                        android:id="@+id/rulesText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/margin_medium"
+                        android:alpha="0.8"
+                        android:fontFamily="@font/roboto_regular"
+                        android:text="Rules"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="16dp"
+                        app:layout_constraintTop_toBottomOf="@id/eventDescription" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/eventRules"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:alpha="0.8"
+                        android:fontFamily="@font/roboto_regular"
+                        android:text="Event description here\njbkkb\nkgkugi\njvghjghjgkhg"
+                        android:textColor="@color/white"
+                        android:textSize="14dp"
+                        android:layout_marginTop="@dimen/spacing_medium"
+                        app:layout_constraintTop_toBottomOf="@id/rulesText" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+                    <TextView
+                        android:id="@+id/prizeText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/margin_medium"
+                        android:alpha="0.8"
+                        android:fontFamily="@font/roboto_regular"
+                        android:text="Prizes"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="16dp"
+                        app:layout_constraintTop_toBottomOf="@id/eventRules" />
+
+                    <LinearLayout
+                        android:id="@+id/layoutPrize1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:textColor="@color/white"
+                        android:textSize="14dp"
+                        android:layout_marginTop="@dimen/spacing_medium"
+                        app:layout_constraintTop_toBottomOf="@id/prizeText">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:alpha="0.8"
+                            android:fontFamily="@font/roboto_regular"
+                            android:text="Winner 1: "
+                            android:textColor="@color/white"
+                            android:textSize="14dp" />
+
+                        <TextView
+                            android:id="@+id/eventprize1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:alpha="0.8"
+                            android:fontFamily="@font/roboto_regular"
+                            android:text="2000"
+                            android:textColor="@color/white"
+                            android:textSize="14dp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/layoutPrize2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:textColor="@color/white"
+                        android:textSize="14dp"
+                        app:layout_constraintTop_toBottomOf="@id/layoutPrize1">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:alpha="0.8"
+                            android:fontFamily="@font/roboto_regular"
+                            android:text="Winner 2: "
+                            android:textColor="@color/white"
+                            android:textSize="14dp" />
+
+                        <TextView
+                            android:id="@+id/eventprize2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:alpha="0.8"
+                            android:fontFamily="@font/roboto_regular"
+                            android:text="1000"
+                            android:textColor="@color/white"
+                            android:textSize="14dp" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/contactText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/margin_medium"
+                        android:alpha="0.8"
+                        android:text="Contact"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="16dp"
+                        app:layout_constraintTop_toBottomOf="@id/layoutPrize2" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:layout_marginTop="@dimen/spacing_medium"
+                        app:layout_constraintTop_toBottomOf="@id/contactText">
+
+                        <TextView
+                            android:id="@+id/eventContactName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:alpha="0.8"
+                            android:fontFamily="@font/roboto_regular"
+                            android:text="Contact Name"
+                            android:textColor="@color/white"
+                            android:textSize="14dp" />
+
+                        <TextView
+                            android:id="@+id/eventContact"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:alpha="0.8"
+                            android:fontFamily="@font/roboto_regular"
+                            android:text="8604609572"
+                            android:textColor="@color/white"
+                            android:textSize="14dp" />
+
+                    </LinearLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.core.widget.NestedScrollView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</androidx.core.widget.NestedScrollView>
