--- a/app/src/main/res/layout/item_team_member.xml
+++ b/app/src/main/res/layout/item_team_member.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent"
     android:padding="@dimen/spacing_xsmall">
@@ -11,6 +11,8 @@
         android:id="@+id/memberImage"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/spacing_medium"
         android:src="@drawable/zealicon_icon"/>
 
     <TextView
