--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -6,23 +6,30 @@
     android:layout_height="100dp"
     android:background="@color/overlay_dark_90">
 
-    <TextView
-        android:id="@+id/zealText"
-        android:layout_width="match_parent"
+<!--    <TextView-->
+<!--        android:id="@+id/zealText"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:text="Zealicon"-->
+<!--        android:textSize="60dp"-->
+<!--        android:textColor="@color/grey_20"-->
+<!--        android:fontFamily="@font/alata_regular"-->
+<!--        android:layout_marginStart="25dp"/>-->
+
+<!--    <View-->
+<!--        android:layout_width="280dp"-->
+<!--        android:layout_height="2dp"-->
+<!--        android:background="@color/colorAccent"-->
+<!--        android:layout_below="@id/zealText"-->
+<!--        android:layout_marginTop="-15dp"-->
+<!--        android:layout_marginBottom="@dimen/spacing_middle"-->
+<!--        android:layout_marginStart="25dp"/>-->
+
+    <ImageView
+        android:layout_width="250dp"
         android:layout_height="100dp"
-        android:text="Zealicon"
-        android:textSize="60dp"
-        android:textColor="@color/grey_20"
-        android:fontFamily="@font/alata_regular"
-        android:layout_marginStart="25dp"/>
-    <View
-        android:layout_width="280dp"
-        android:layout_height="2dp"
-        android:background="@color/colorAccent"
-        android:layout_below="@id/zealText"
-        android:layout_marginTop="-15dp"
-        android:layout_marginBottom="@dimen/spacing_middle"
-        android:layout_marginStart="25dp"/>
+        android:src="@drawable/zealicon_name"
+        android:layout_margin="10dp"/>
 
 
 </RelativeLayout>
