--- a/app/src/main/res/layout/my_playlist_fragment.xml
+++ b/app/src/main/res/layout/my_playlist_fragment.xml
@@ -78,4 +78,37 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/noPlaylist"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/text_32">
+
+        <ImageView
+            android:id="@+id/noItemBox"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/empty_box"/>
+
+        <TextView
+            android:layout_width="@dimen/zero_dimen"
+            android:layout_height="wrap_content"
+            android:text="You have not added any track\nin the playlist"
+            app:layout_constraintTop_toBottomOf="@id/noItemBox"
+            android:textColor="@color/white"
+            android:fontFamily="@font/alata_regular"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:gravity="center"
+            android:textSize="18dp"
+            android:layout_marginTop="@dimen/spacing_mlarge"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
