Reminder added and UI fixes

--- a/app/src/main/res/layout/fragment_route.xml
+++ b/app/src/main/res/layout/fragment_route.xml
@@ -18,7 +18,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Route"
+            android:text="Reach us"
             android:fontFamily="@font/alata_regular"
             android:textColor="@color/colorAccent"
             android:textSize="@dimen/text_32"/>
