Add Intro Slider

--- a/app/src/main/res/layout/my_playlist_fragment.xml
+++ b/app/src/main/res/layout/my_playlist_fragment.xml
@@ -79,6 +79,7 @@
                 android:layout_marginTop="@dimen/spacing_middle"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:itemCount="10"
+                android:scrollbars="none"
                 tools:listitem="@layout/item_search"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
