fix media player

--- a/app/src/main/res/layout/fragment_intro1.xml
+++ b/app/src/main/res/layout/fragment_intro1.xml
@@ -9,6 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/final001"
-        android:layout_margin="16dp"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="56dp"/>
 
 </RelativeLayout>
