--- a/app/src/main/res/layout/fragment_intro2.xml
+++ b/app/src/main/res/layout/fragment_intro2.xml
@@ -8,7 +8,10 @@
     <ImageView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="56dp"
         android:src="@drawable/final002"/>
 
 </RelativeLayout>
